# cop

./: CMakeLists.txt  README.md  aalloc.h  cop_alloc.h  cop_attributes.h  cop_conversions.h  cop_filemap.h  cop_log.h  cop_main.h  cop_sort.h  cop_strdict.h  cop_strtypes.h  cop_thread.h  cop_vec.h  vec.h
app_cop_vec_test/: CMakeLists.txt  cop_vec_test.c
cmake_support/: copConfig.cmake.in
libcop/: CMakeLists.txt  cop_alloc.c  cop_filemap.c  cop_strdict.c
tests/: CMakeLists.txt  cop_strdict_tests.c  cop_vec_tests.c
